infra/k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dystopian-frontend
  namespace: dystopian
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 3000
