infra/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: dystopian
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-https: "true"
    service.beta.kubernetes.io/do-loadbalancer-certificate-name: dn-lsx-li-letsencrypt
    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"

spec:
  ingressClassName: ingress-nginx
  rules:
  - host: dn.lsx.li
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dystopian-frontend
            port:
              number: 80
  tls:
  - hosts:
    - dn.lsx.li
    secretName: dn-lsx-li-tls
